@@ -222,25 +222,25 @@ literal|"/schema/dynamicFields/[1]/name=='ignored_*'"
 argument_list|,
 literal|"/schema/dynamicFields/[2]/name=='*_mfacet'"
 argument_list|,
-literal|"/schema/copyFields/[6]=={'source':'title','dest':'dest_sub_no_ast_s'}"
+literal|"/schema/copyFields/[1]=={'source':'src_sub_no_ast_i','dest':'title'}"
 argument_list|,
-literal|"/schema/copyFields/[7]=={'source':'*_i','dest':'title'}"
+literal|"/schema/copyFields/[7]=={'source':'title','dest':'dest_sub_no_ast_s'}"
 argument_list|,
-literal|"/schema/copyFields/[8]=={'source':'*_i','dest':'*_s'}"
+literal|"/schema/copyFields/[8]=={'source':'*_i','dest':'title'}"
 argument_list|,
-literal|"/schema/copyFields/[9]=={'source':'*_i','dest':'*_dest_sub_s'}"
+literal|"/schema/copyFields/[9]=={'source':'*_i','dest':'*_s'}"
 argument_list|,
-literal|"/schema/copyFields/[10]=={'source':'*_i','dest':'dest_sub_no_ast_s'}"
+literal|"/schema/copyFields/[10]=={'source':'*_i','dest':'*_dest_sub_s'}"
 argument_list|,
-literal|"/schema/copyFields/[11]=={'source':'*_src_sub_i','dest':'title'}"
+literal|"/schema/copyFields/[11]=={'source':'*_i','dest':'dest_sub_no_ast_s'}"
 argument_list|,
-literal|"/schema/copyFields/[12]=={'source':'*_src_sub_i','dest':'*_s'}"
+literal|"/schema/copyFields/[12]=={'source':'*_src_sub_i','dest':'title'}"
 argument_list|,
-literal|"/schema/copyFields/[13]=={'source':'*_src_sub_i','dest':'*_dest_sub_s'}"
+literal|"/schema/copyFields/[13]=={'source':'*_src_sub_i','dest':'*_s'}"
 argument_list|,
-literal|"/schema/copyFields/[14]=={'source':'*_src_sub_i','dest':'dest_sub_no_ast_s'}"
+literal|"/schema/copyFields/[14]=={'source':'*_src_sub_i','dest':'*_dest_sub_s'}"
 argument_list|,
-literal|"/schema/copyFields/[15]=={'source':'src_sub_no_ast_i','dest':'title'}"
+literal|"/schema/copyFields/[15]=={'source':'*_src_sub_i','dest':'dest_sub_no_ast_s'}"
 argument_list|,
 literal|"/schema/copyFields/[16]=={'source':'src_sub_no_ast_i','dest':'*_s'}"
 argument_list|,
